# pdf-reader

./: .env.example  .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  pyproject.toml  test_proxy.py
src/: app.js  chat.js  file-explorer.js  pdf-viewer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: chat.rs  config.rs  filesystem.rs  lookup.rs  mod.rs  storage.rs
