[package]
name = "pdf-reader"
version = "0.1.0"
edition = "2021"

[lib]
name = "pdf_reader_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
walkdir = "2"
base64 = "0.22"
open = "5"
tokio = { version = "1", features = ["sync"] }
